--- a/styles.css
+++ b/styles.css
@@ -87,11 +87,12 @@ footer p {
 .lft {
   text-align: right;
   width: 30%;
-  padding: 10px;
+  margin: 10px;
 }
 .rgt {
   width: 70%;
   padding: 10px;
+  margin-left: 0;
 }
 
 .button {
@@ -106,4 +107,9 @@ img {
   max-width: 40px;
   max-height: 40px;
   margin: 10px;
+}
+.flex{
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
 }
